<resources>
    <string name="app_name">Omdb Desafio</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Buscar Filme</string>
    <string name="text_diretor">Diretor :</string>
    <string name="text_year">Ano :</string>
    <string name="txt_writer">Escritor(s) :</string>
    <string name="txt_plot">Enredo :</string>
    <string name="txt_actors">Atores :</string>
    <string name="txt_genre">Genero :</string>
    <string name="txt_type">Tipo :</string>
    <string name="txt_time">Duração :</string>
    <string name="error_connection">Sem acesso à internet</string>
    <string name="txt_title_search">Buscar Filme</string>
    <string name="txt_awards">Prêmios :</string>
    <string name="txt_released">Liberado :</string>
    <string name="txt_country">País :</string>
    <string name="txt_seasor">Seasor :</string>
    <string name="url_search_film">http://www.omdbapi.com</string>
    <string name="msg_delete">Deseja relamente deletar o filme</string>
    <string name="apiKey">fcbd49b5</string>

    <item type="id" name="tag_image_worker"></item>
    <item type="id" name="tag_second"></item>

</resources>
