<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@drawable/ic_done"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">


            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_year"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_diretor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_director"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_writer"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_writer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_plot"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_plot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_actors"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_actors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_genre"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_type"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>


            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_released"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_released"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_awards"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_awards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_country"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <LinearLayout
                style="@style/Widget.Detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_seasor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_seasor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="100dp" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>